--- a/FixItLevelUp3.appstudio/FixItLevelUp3.project
+++ b/FixItLevelUp3.appstudio/FixItLevelUp3.project
@@ -71,7 +71,7 @@
       "useStrict": "", 
       "version": "1.0.0", 
       "viewportFit": "cover", 
-      "voltAppId": "", 
+      "voltAppId": "yxCWb9", 
       "voltDomain": ""
     }
   ], 
